Just workinng on spring arm and pc feels

--- a/Settings/Graphics Settings.json
+++ b/Settings/Graphics Settings.json
@@ -22,7 +22,7 @@
 	"PostProcessSettings": {
 		"AO": {
 			"OverrideFlags": 1,
-			"Enabled": false,
+			"Enabled": true,
 			"Intensity": 0.8,
 			"Power": 0.75,
 			"Radius": 0.7,
@@ -278,7 +278,7 @@
 		},
 		"AA": {
 			"OverrideFlags": 31,
-			"Mode": 0,
+			"Mode": 1,
 			"TAA_JitterSpread": 1.0,
 			"TAA_Sharpness": 0.0,
 			"TAA_StationaryBlending": 0.95,
